new: added ability to get all reviews paginated and to filter by stars